syntax = "proto3";

option java_multiple_files = true;
option java_package = "raft.rpcmodule";
option java_outer_classname = "RaftRpcServiceProto";

package raft;

// declare a service
service RaftRpcService {
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponse);
}

message LogEntry {
    int64 term = 1;
    int64 index = 2;
    string value = 3;
}

//RequestVote RPC
message RequestVoteRequest {
  int64 term = 1;
  int32 candidateId = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}
message RequestVoteResponse {
  int64 term = 1;
  bool voteGranted = 2;
}

// AppendEntries RPC
message AppendEntriesRequest {
  int64 term = 1;
  int32 leaderId = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  int64 leaderCommit = 6;
}
message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
}